Update: fixed review bugs
